--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -11,13 +11,13 @@
           </p>
           <input type="email" [(ngModel)]="email" name="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
           <input type="password" [(ngModel)]="password" name="password" class="login-password" required="true" placeholder="Password" />
+          <input type="text" [(ngModel)]="name" name="name" class="login-password" required="true" placeholder="Name" />
 
-          <input type="submit" name="Login"(click)="login()" value="Login" class="login-submit" />
+          <input type="submit" name="Login"(click)="register()" value="Login" class="login-submit" />
         </form>
-        <div class="auth-info"> Need an account?
-          <a routerLink="/register" routerLinkActive="active" class="auth-info-link">Register</a>
+        <div class="auth-info"> Have an account?
+          <a routerLink="/login" routerLinkActive="active" class="auth-info-link">Login</a>
         </div>
-
 
         <div class="underlay-black"></div>
 
