--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -22,7 +22,30 @@
   /* Whatever width you want */
 }
 
+input {
 
+  ::-webkit-input-placeholder {
+     color: rgba(255,255,255,0.7);
+  }
+  ::-moz-placeholder {
+     color: rgba(255,255,255,0.7);
+  }
+  :-ms-input-placeholder {
+     color: rgba(255,255,255,0.7);
+  }
+  &:focus {
+    outline: 0 transparent solid;
+    ::-webkit-input-placeholder {
+     color: rgba(0,0,0,0.7);
+    }
+    ::-moz-placeholder {
+       color: rgba(0,0,0,0.7);
+    }
+    :-ms-input-placeholder {
+       color: rgba(0,0,0,0.7);
+    }
+  }
+}
 
 
 .login-form {
@@ -30,7 +53,7 @@
   //box-shadow: 0 0 1rem rgba(0,0,0,0.3); */
   min-height: 10rem;
   margin: auto;
-  max-width: 70%;
+  max-width: 80%;
   padding: .5rem;
 }
 .login-text {
@@ -51,7 +74,7 @@
 .login-username, .login-password {
   background: transparent;
   border: 0 solid;
-  border-bottom: 5px solid rgba(white, .5);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.5); Fix applied here */
   color: white;
   display: block;
   margin: 1rem;
