Changed method to auth User, now using cookies

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,8 +10,8 @@
             </span>
           </p>
           <div class = "form-center">
-            <input type="email" [(ngModel)]="email" name="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
-            <input type="password" [(ngModel)]="password" name="password" class="login-password" required="true" placeholder="Password" />
+            <input type="email" [(ngModel)]="email" name="email" class="login-username" autofocus="true" required="true" value="user@user.com" placeholder="Email" />
+            <input type="password" [(ngModel)]="password" name="password" class="login-password" required="true" value="pass" placeholder="Password" />
           </div>
 
 
