--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,16 +2,19 @@
   <div class="middle">
     <div class="inner">
       <div class="parent">
-        <form class="login-form">
+        <form class="login-form" [formGroup]="registrationForm">
           <p class="login-text">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-lock fa-stack-1x"></i>
             </span>
           </p>
-          <input type="email" [(ngModel)]="email" name="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
-          <input type="password" [(ngModel)]="password" name="password" class="login-password" required="true" placeholder="Password" />
-          <input type="text" [(ngModel)]="name" name="name" class="login-password" required="true" placeholder="Name" />
+          <div>
+            <input type="text" [(ngModel)]="name" name="name" formControlName="name" class="login-password" required="true" placeholder="Name" />
+          </div>
+
+          <input type="email" [(ngModel)]="email" name="email" formControlName="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
+          <input type="password" [(ngModel)]="password" name="password" formControlName="password" class="login-password" required="true" placeholder="Password" />
 
           <input type="submit" name="Register"(click)="register()" value="Register" class="login-submit" />
         </form>
