--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700);
+
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
 
@@ -21,6 +21,9 @@
   width: 400px;
   /* Whatever width you want */
 }
+
+
+
 
 input {
 
@@ -73,8 +76,9 @@ input {
 
 .login-username, .login-password {
   background: transparent;
+  border-radius: 20px;
   border: 0 solid;
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.5); Fix applied here */
+  border-bottom: 5px solid rgba(white, .5);
   color: white;
   display: block;
   margin: 1rem;
@@ -121,11 +125,17 @@ input {
   font-size: 1rem;
   padding: .25rem;
   transition: 250ms background ease-in;
-  &:hover, &:focus {
-    background: rgba(116, 116, 116, 0.363);
-    color: rgb(255, 255, 255);
-    transition: 250ms background ease-in;
-  }
+}
+
+.login-submit:hover{
+  background: rgba(116, 116, 116, 0.363);
+  color: rgb(255, 255, 255);
+  transition: 250ms background ease-in;
+}
+
+/* Remove focus outline */
+.login-submit:focus {
+  outline: none;
 }
 
 
