--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,16 +2,16 @@
   <div class="middle">
     <div class="inner">
       <div class="parent">
-        <form class="login-form">
+        <form class="login-form" [formGroup]="loginForm">
           <p class="login-text">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-lock fa-stack-1x"></i>
             </span>
           </p>
-          <div class = "form-center">
-            <input type="email" [(ngModel)]="email" name="email" class="login-username" autofocus="true" required="true" value="user@user.com" placeholder="Email" />
-            <input type="password" [(ngModel)]="password" name="password" class="login-password" required="true" value="pass" placeholder="Password" />
+          <div class = "form-center" >
+            <input type="email" [(ngModel)]="email" formControlName="email" name="email" class="login-username" autofocus="true" required="true" value="user@user.com" placeholder="Email" />
+            <input type="password" [(ngModel)]="password" formControlName="password" name="password" class="login-password" required="true" value="pass" placeholder="Password" />
           </div>
 
 
