--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div id="scrollable">
+  <div id="content">
+    <div class="spacer" style="height: 10rem; "></div>
+    <div class="dateInfo">
+      <div class="clock">{{dateTime | date:'H:mm'}}</div>
+      <br>
+      <div class="date">{{dateTime | date:'fullDate'}}</div>
+    </div>
+  </div>
+
+
+
+</div>
