--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,19 @@
+
+
 /* You can add global styles to this file, and also import other style files */
 body {
-  font-family: 'Open Sans';
-  font-weight: 100;
   display: flex;
   overflow: hidden;
+  font-family: "Rubik", sans-serif;
 }
+
 html {
   display: block;
   height: 100dvh;
-  padding: 20px;
   margin: 0;
-  background-image: radial-gradient(
-      circle at 50% 0%,
-      rgb(67, 54, 74) 16.4%,
-      rgb(47, 48, 67) 68.2%,
-      rgb(27, 23, 36) 99.1%
-  );
+  background-position: bottom;
+  background-size: cover;
+  background-image: url('https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80')
 }
 
 html, body { height: 100%; }
@@ -59,4 +57,18 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .mdc-snackbar__label {
     color: white !important;
   }
+}
+
+
+[class*=underlay] {
+  left: 0;
+  min-height: 100%;
+  min-width: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.underlay-black {
+  background: rgba(0,0,0,0.5);
+  z-index: -1;
 }
