Added logout logic

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,15 @@
 <div id="scrollable">
   <div id="content">
-    <div class="spacer" style="height: 10rem; "></div>
+    <div class="spacer" style="height: 10rem; ">
+      <button (click)="logout()"></button>
+    </div>
     <div class="dateInfo">
       <div class="clock">{{dateTime | date:'H:mm'}}</div>
       <br>
-      <div class="date">{{dateTime | date:'fullDate'}}</div>
+      <div class="date" *ngIf="(weather$ | async) as weather" >{{dateTime | date:'fullDate'}}</div>
+      <div class="date" *ngIf="(weather$ | async) as weather">
+        {{location.city}} {{ weather.data.values.temperature | number:'1.0-0' }} °C
+      </div>
     </div>
   </div>
 
