--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,18 +7,18 @@
 }
 
 .date{
+
   font-family:  "Rubik", sans-serif;
   text-shadow: 2px 2px 2px rgba(black, 0.1);
   color: white;
   font-size: 1em;
-
-
 }
 
 .dateInfo{
-  padding-left: 5rem;
   text-align: right;
+  padding-left: 5rem;
   width: 15rem;
+  white-space: nowrap;
 }
 
 
