Before change to SCSS

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="scrollable">
   <div id="content">
-    <div class="spacer" style="height: 10rem; ">
-      <button (click)="logout()"></button>
+    <div class="spacer">
+      <button class="loggout-button" (click)="logout()">Log out</button>
     </div>
     <div class="dateInfo">
       <div class="clock">{{dateTime | date:'H:mm'}}</div>
