--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,18 @@ html {
   display: block;
   height: 100dvh;
   margin: 0;
-  background-position: bottom;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   background-image: url('https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80')
+}
+
+input, h1, h3, a, span {
+  color: rgb(90, 90, 90,0.5);
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  margin: 0px;
+  padding: 0px;
 }
 
 html, body { height: 100%; }
@@ -71,4 +80,26 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .underlay-black {
   background: rgba(0,0,0,0.5);
   z-index: -1;
+}
+
+.loggout-button{
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(3px);
+  background-color: rgba(white, 0.1);
+  border: 1px solid rgba(white, 0.1);
+  border-radius: 100px;
+  box-shadow: 2px 2px 2px rgba(black, 0.1);
+  cursor: pointer;
+  left: 50%;
+  font-size: 3rem;
+
+  margin: 100px;
+  padding: 1rem;
+  font-family: "Rubik", sans-serif;
+
+
+  &:hover {
+    background-color: rgba(white, 0.2);
+    border: 1px solid rgba(white, 0.3);
+  }
 }
