Changed to scss and wokred on login,register page also on logout button in home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div id="scrollable">
   <div id="content">
     <div class="spacer">
-      <button class="loggout-button" (click)="logout()">Log out</button>
+      <div class="up-right">
+        <button class="glass-button loggout-button" (click)="logout()">Log out</button>
+      </div>
     </div>
     <div class="dateInfo">
       <div class="clock">{{dateTime | date:'H:mm'}}</div>
@@ -12,7 +14,5 @@
       </div>
     </div>
   </div>
-
-
 
 </div>
