--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
               <input type="password" [(ngModel)]="password" formControlName="password" name="password" class="login-password" required="true" value="pass" placeholder="Password" />
             </div>
 
-            <input type="submit" name="Login"(click)="login()" value="Login" class="login-submit" />
+            <input type="submit" name="Login"(click)="login()" value="Login" class="glass-button login-submit" />
           </form>
           <label class="auth-info" routerLink="/register">Need an account? </label>
         </div>
