--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -3,20 +3,11 @@
     <div class="inner">
       <div class="parent">
         <form class="login-form" [formGroup]="registrationForm">
-          <p class="login-text">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-lock fa-stack-1x"></i>
-            </span>
-          </p>
-          <div>
+
             <input type="text" [(ngModel)]="name" name="name" formControlName="name" class="login-password" required="true" placeholder="Name" />
-          </div>
-
-          <input type="email" [(ngModel)]="email" name="email" formControlName="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
-          <input type="password" [(ngModel)]="password" name="password" formControlName="password" class="login-password" required="true" placeholder="Password" />
-
-          <input type="submit" name="Register"(click)="register()" value="Register" class="login-submit" />
+            <input type="email" [(ngModel)]="email" name="email" formControlName="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
+            <input type="password" [(ngModel)]="password" name="password" formControlName="password" class="login-password" required="true" placeholder="Password" />
+            <input type="submit" name="Register"(click)="register()" value="Register" class="glass-button login-submit" />
         </form>
         <label class="auth-info" routerLink="/login">Have an account? </label>
       </div>
