--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -17,12 +17,10 @@
   margin-left: auto;
   margin-right: auto;
   width: 400px;
-  /* Whatever width you want */
 }
 
 
 input {
-
   ::-webkit-input-placeholder {
      color: rgba(255,255,255,0.7);
   }
@@ -53,8 +51,14 @@ input {
   min-height: 10rem;
   margin: auto;
   max-width: 80%;
-  padding: .5rem;
+  padding: 0.25rem 1rem;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+  color: white;
 }
+
+
 .login-text {
   /* //background: hsl(40,30,60);
   //border-bottom: .5rem solid white; */
@@ -72,13 +76,13 @@ input {
 
 .login-username, .login-password {
   background: transparent;
-  border-radius: 20px;
   border: 0 solid;
-  border-bottom: 5px solid rgba(white, .5);
+  border-radius: 4px;
+  border-bottom: 1px solid rgba(white, .5);
   color: white;
   display: block;
-  margin: 1rem;
-  padding: .5rem;
+  margin: 2rem 1rem;
+  padding: 0 0.5rem; ;
   font-size: 1rem;
   transition: 250ms background ease-in;
   width: calc(100% - 3rem);
@@ -109,29 +113,20 @@ input {
 }
 
 .login-submit {
-  border: 0;
-  border-radius: 20px;
-  background: transparent;
-  width: 50%;
-  color: white;
-  display: block;
-  margin: 1rem auto;
-  margin-top: 30px;
-  min-width: 1px;
-  font-size: 1rem;
-  padding: .25rem;
-  transition: 250ms background ease-in;
-}
+  display:block;
+  margin:3rem auto;
 
-.login-submit:hover{
-  background: rgba(116, 116, 116, 0.363);
-  color: rgb(255, 255, 255);
-  transition: 250ms background ease-in;
-}
+  border: 1px solid rgba(white, 0);
+  background-color: transparent;
+  box-shadow: 2px 2px 2px rgba(black, 0.0);
 
-/* Remove focus outline */
-.login-submit:focus {
-  outline: none;
+  &:hover{
+    background-color: rgba(white, 0.2);
+    border: 1px solid rgba(white, 0.3);
+    transition: 250ms background ease-in;
+    transition: 250ms border ease-in;
+    }
+
 }
 
 
