--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 body {
   display: flex;
   overflow: hidden;
+  margin: 0;
   font-family: "Rubik", sans-serif;
 }
 
@@ -19,15 +20,11 @@ html {
 
 input, h1, h3, a, span {
   color: rgb(90, 90, 90,0.5);
-  font-family: "Rubik", sans-serif;
   font-weight: 400;
   margin: 0px;
   padding: 0px;
+
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
 
 .snackbar-error {
   .mdc-snackbar__surface {
@@ -82,24 +79,27 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   z-index: -1;
 }
 
-.loggout-button{
-  background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(3px);
-  background-color: rgba(white, 0.1);
+
+.glass-button{
   border: 1px solid rgba(white, 0.1);
-  border-radius: 100px;
+  background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 2px 2px 2px rgba(black, 0.1);
+  backdrop-filter: blur(3px);
+  border-radius: 100px;
+
+  color: white;
+  font-size: 1rem;
+
+  padding: 0.5rem 1rem;
   cursor: pointer;
-  left: 50%;
-  font-size: 3rem;
+  transition: 250ms background ease-out;
+  transition: 250ms border ease-out;
 
-  margin: 100px;
-  padding: 1rem;
-  font-family: "Rubik", sans-serif;
-
-
-  &:hover {
+  &:hover{
     background-color: rgba(white, 0.2);
     border: 1px solid rgba(white, 0.3);
+    transition: 250ms background ease-in;
+    transition: 250ms border ease-in;
+    }
   }
-}
+
