--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -1,24 +1,23 @@
 <div id="background">
     <app-navbar [isClockVisible]="true" [isLogoutVisible]="true"></app-navbar>
-    <div class="board-container" 
-    #board
-      [ngStyle]="{
-    'background-size': zoom + '%'}"
-    (wheel)="onWheel($event)"
-    > 
-    <p>{{boardX}}</p>
-    <p>{{zoom}}</p>
-    <ng-container *ngFor="let item of items">
-    <div
-        *ngIf="isItemvisible(item)"
-        class="board-item"
-        [style.left.px]="item.x"
-        [style.top.px]="item.y"
-        [style.transform]="'scale(' + item.scale + ')'"
-    >
-        {{item.label}}
-    </div>
-    </ng-container>
-</div>
-</div>
 
+    <div class="board-container" #board (wheel)="onWheel($event)">
+        <p>{{cameraX}}</p>
+        <p>{{zoom}}</p>
+
+        <div #itemsContainer class="items-container">
+            <ng-container *ngFor="let item of items">
+                <div
+                    *ngIf="isItemVisible(item)"
+                    class="board-item"
+                    [style.width.px]="item.width"
+                    [style.height.px]="item.height"
+                    [style.left.px]="item.screenX"
+                    [style.top.px]="item.screenY"
+                >
+                    {{item.label}}
+                </div>
+            </ng-container>
+        </div>
+    </div>
+</div>
