--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -1,13 +1,15 @@
 <div id="background">
     <app-navbar [isClockVisible]="true" [isLogoutVisible]="true"></app-navbar>
 
-    <div class="board-container" #board (wheel)="onWheel($event)">
-        <p>{{cameraX}}</p>
-        <p>{{zoom}}</p>
-
-        <div #itemsContainer class="items-container">
+        <div class="debug-overlay">
+            <div>cameraX: {{cameraX}} cameraY: {{cameraY}}</div>
+            <div>zoom: {{zoom}}</div>
+        </div>
+        <div class="board-container" #board (wheel)="onWheel($event)">
+                <div #itemsContainer class="items-container">
             <ng-container *ngFor="let item of items">
                 <div
+                    (click)="centerOnItem(item)"
                     *ngIf="isItemVisible(item)"
                     class="board-item"
                     [style.width.px]="item.width"
