Fixed center on element and removed debug code from isVisible...

--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -1,6 +1,5 @@
 <div id="background">
-    <app-navbar [isClockVisible]="true" [isLogoutVisible]="true"></app-navbar>
-
+    <app-navbar #navbar [isClockVisible]="true" [isLogoutVisible]="true"></app-navbar>
         <div class="debug-overlay">
             <div>cameraX: {{cameraX}} cameraY: {{cameraY}}</div>
             <div>zoom: {{zoom}}</div>
