Changed the items to proper components and added tile data class

--- a/src/app/pages/board/board-tile/board-tile.component.html
+++ b/src/app/pages/board/board-tile/board-tile.component.html
@@ -1,1 +1,9 @@
-<p>board-tile works!</p>
+<div 
+  class="board-item"
+  [style.width.px]="tile.width"
+  [style.height.px]="tile.height"
+  [style.left.px]="tile.screenX"
+  [style.top.px]="tile.screenY"
+>
+  {{tile.label}}
+</div>
