--- a/src/app/pages/board/board-tile/board-tile.component.html
+++ b/src/app/pages/board/board-tile/board-tile.component.html
@@ -1,7 +1,7 @@
 <div 
   class="board-item"
-  [style.width.px]="tile.width"
-  [style.height.px]="tile.height"
+  [style.width.px]="tile.screenWidth"
+  [style.height.px]="tile.screenHeight"
   [style.left.px]="tile.screenX"
   [style.top.px]="tile.screenY"
 >
