working with the connectors have to fix their positioning so it would be relative to the tiles

--- a/src/app/pages/board/board-connector/board-connector.component.html
+++ b/src/app/pages/board/board-connector/board-connector.component.html
@@ -1,1 +1,8 @@
-<p>board-connector works!</p>
+<div class="drawn-square" #connector
+    [style.left.px]="data.screenX"
+    [style.top.px]="data.screenY"
+    [style.width.px]="data.screenWidth"
+    [style.height.px]="data.screenHeight"
+>
+    {{data.itemB.label}}  
+</div>
