--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -24,6 +24,7 @@
                     <app-board-connector 
                         #connector
                         [data]="connector"
+                        [zoom]="zoom"
                         (click)="centerOnItem(connector.itemB)"
                     >
                     </app-board-connector>
@@ -31,7 +32,7 @@
              </div>
 
              <!-- SVG lines for connectors -->
-             <svg class="connector-lines" width="100%" height="100%">
+             <!-- <svg class="connector-lines" width="100%" height="100%">
                 <line *ngFor="let connector of connectors"
                     [attr.x1]="(connector.itemA.screenX + connector.itemA.screenWidth / 2)"
                     [attr.y1]="(connector.itemA.screenY + connector.itemA.screenHeight / 2)"
@@ -40,6 +41,6 @@
                     stroke="rgba(102, 126, 234, 0.5)"
                     stroke-width="2"
                 />
-             </svg>
+             </svg> -->
     </div>
 </div>
