Added menu with text formating to the navbar and handled chaning it with center on item

--- a/src/app/helpers/navbar/navbar.component.html
+++ b/src/app/helpers/navbar/navbar.component.html
@@ -3,6 +3,14 @@
     <div class="up-left">
       <button class="navbar-logo" (click)="goHome()">BaseServer</button>
     </div>
+    <div class="up-center">
+       <div class="center-content">
+        <ng-container *ngIf="state.template">
+          <ng-container [ngTemplateOutlet]="state.template" [ngTemplateOutletContext]="state.context"></ng-container>
+        </ng-container>
+       </div>
+      
+    </div>
     <div class="up-right">
       <div *ngIf="isClockVisible" class="clock-small">{{ dateTime | date: 'H:mm' }}</div>
       <button *ngIf="isLogoutVisible" class="navbar-logout-button" (click)="logout()">Log out</button>
